2009-08-11  Bart Veer  <bartv@ecoscentric.com>

	* src/tls.c: new module for TLS (thread local storage) support as
	expected by gcc.

	* cdl/hal_synth_i386.cdl, include/var_arch.h,
	include/pkgconf/mlt_synth_i386_rom.ldi, src/vectors.s: add TLS
	support.

2009-07-14  Bart Veer  <bartv@ecoscentric.com>

	* cdl/hal_synth_i386.cdl: when building on x86_64 machines, use
	gcc -m32 instead of i686-pc-linux-gnu.

2009-07-09  Bart Veer  <bartv@ecoscentric.com>

	* src/syscall-i386-linux-1.0.S: add rename() system call.

2009-01-31  Bart Veer <bartv@ecoscentric.com>

	* cdl/hal_synth_i386.cdl: update compiler flags for gcc 4.x

2005-11-19  Bart Veer  <bartv@ecoscentric.com>

	* include/pkgconf/mlt_synth_i386_rom.ldi: add new heap section to
	avoid the use of brk()

2005-11-05  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/syscall-i386-linux-1.0.S: renamed prev_?stat to old?stat to
	match the kernel. Removed STATCALL2 macro because it caused
	confusion. Added the new?stat system calls.

2005-06-26  Bart Veer  <bartv@ecoscentric.com>

	* include/var_intr.h (HAL_DELAY_US): new header to supply
	processor-specific HAL_DELAY_US() macro

2005-03-21  Bart Veer  <bartv@ecoscentric.com>

	* cdl/hal_synth_i386.cdl, src/profile.c: add profiling support.

2005-03-11  Bart Veer  <bartv@ecoscentric.com>

	* include/var_io.h, src/syscall-i386-linux-1.0.S:
	Improve support for returning from signal handlers

2004-12-14  Alexander Neundorf <neundorf@kde.org>

	* src/syscall-i386-linux-1.0.S:	Add ipc system call

2004-08-04  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* src/syscall-i386-linux-1.0.S:	Add mkdir system call

2004-06-21  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* src/syscall-i386-linux-1.0.S:
	Add readdir, lstat and fstat system calls

2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/hal_synth_i386.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2002-09-15  Bart Veer  <bartv@ecoscentric.com>

	* src/syscall-i386-linux-1.0.S: