@@ -1,3 +1,8 @@
+2011-06-05  John Dallaway  <john@dallaway.org.uk>
+
+	* src/syscall-i386-linux-1.0.S: Fix .size and .type expressions to
+	avoid build error with binutils 2.21.x. Patch from Tom Schouten.
+
 2009-08-11  Bart Veer  <bartv@ecoscentric.com>
 
 	* src/tls.c: new module for TLS (thread local storage) support as
@@ -427,7 +432,7 @@ Mon Nov  9 15:18:11 GMT 1998   Chris Provenzano  <proven@cygnus.com>
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2011 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
